# network-threat-detector

./: README.md  notebook (1).ipynb  notebook.ipynb  notebook_draft_1.ipynb  notebook_final.ipynb  pyproject.toml  requirements.txt
CSV Files/: NUSW-NB15_features.csv
